# dicom_star

./: README.md  pyproject.toml
data_assigner/: analyzer.py  logic.py  main.py  tokens.py
dicom_star/: definitions.toml  main.py
dicom_star/core/: analyzer.py  logic.py  tokens.py
